--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Config-IniHash
-version:      3.00.00
-version_from: IniHash.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Config-IniHash
+version:             3.00.02
+abstract:            Perl extension for reading and writing INI files
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.3201
+distribution_type:   module
+requires:     
     Hash::Case:                    0
     Hash::WithDefaults:            0.04
     IO::Scalar:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Jenda Krynicky (Jenda@Krynicky.cz)
